# LinuxApplicationDevelopment

./: README.md
01_TerminalProject/: .gitignore  Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  scen1.gdb  scen2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  overload_remove.c  tests.sh
07_Environmental/: Makefile.am  build_everything.sh  configure.ac  rhasher.c  test_everything.sh
07_Environmental/tests/: md5_test.sh  sha1_test.sh
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: guess.c
09_PatchDiff/: Makefile  maze.c  patch1.diff  patch2.diff  patch3.diff
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am
10_LibTesting/tests/: Makefile.am  tests.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac  make_everything.sh
11_Documenting/po/: ru.po
11_Documenting/src/: Makefile.am  guess.c
11_backup/: Doxyfile.in
12_InstallPackaging/: Makefile.am  configure.ac
12_InstallPackaging/po/: POTFILES.in  guess.pot  ru.po
12_InstallPackaging/src/: guess.c  guess.h  main.c
12_InstallPackaging/tests/: Makefile.am  tests.ts
